--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@import "../styles/tent-item.scss";
+@import "../styles/custom-datepicker.scss";
+@import "../styles/slider.scss";
 
 * {
     margin: 0;
@@ -295,7 +299,7 @@ body {
     transition: all ease 0.4s;
 
     &:hover {
-        background-color: #c42e04;
+        background-color: #43ff64d9;
 
         svg {
             path {
@@ -426,4 +430,75 @@ body {
 
 .slick-dots {
     bottom: 25px !important;
+}
+
+.checkbox-input {
+    width: 16px;
+    height: 16px;
+    border: 1px solid var(--line);
+    border-radius: 4px;
+    position: relative;
+
+    input {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+        cursor: pointer;
+    }
+
+    .icon-checkbox {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 20px;
+        height: 20px;
+        opacity: 0;
+    }
+
+    input:checked + .icon-checkbox {
+        opacity: 1;
+    }
+}
+
+.block-input {
+    width: 20px;
+    height: 20px;
+    border: 1px solid var(--variant2);
+    border-radius: 4px;
+    position: relative;
+}
+.block-input input {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    cursor: pointer;
+}
+.block-input .icon-checkbox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 26px;
+    height: 26px;
+    opacity: 0;
+}
+.block-input input:checked {
+    border: 1px solid var(--primary);
+}
+.block-input input:checked + .icon-checkbox {
+    opacity: 1;
+}
+
+.bg-surface {
+    --tw-bg-opacity: 1;
+    background-color: rgb(248 248 248 / var(--tw-bg-opacity));
 }
