--- a/app/globals.scss
+++ b/app/globals.scss
@@ -190,7 +190,6 @@ body {
     line-height: 88px;
     font-weight: 600;
     text-transform: capitalize;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .heading2 {
@@ -198,7 +197,6 @@ body {
     line-height: 68px;
     font-weight: 600;
     text-transform: capitalize;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .heading3 {
@@ -206,7 +204,6 @@ body {
     line-height: 52px;
     font-weight: 600;
     text-transform: capitalize;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .heading4 {
@@ -214,7 +211,6 @@ body {
     line-height: 40px;
     font-weight: 600;
     text-transform: capitalize;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .heading5 {
@@ -222,14 +218,12 @@ body {
     line-height: 32px;
     font-weight: 600;
     text-transform: capitalize;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .heading6 {
     font-size: 20px;
     line-height: 28px;
     font-weight: 600;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .text-title {
@@ -237,7 +231,6 @@ body {
     line-height: 28px;
     font-weight: 600;
     text-transform: capitalize;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .text-button {
@@ -246,14 +239,12 @@ body {
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1.28px;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .text-button-sm {
     font-size: 14px;
     line-height: 22px;
     font-weight: 600;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .body2 {
@@ -280,7 +271,6 @@ body {
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.96px;
-    font-family: "Jost", "__Jost_f47db6";
 }
 
 .button-main {
@@ -288,7 +278,7 @@ body {
     line-height: 24px;
     font-weight: 600;
     text-transform: uppercase;
-    font-family: "Jost", "__Jost_f47db6";
+
     letter-spacing: 1.28px;
     color: var(--white);
     background-color: var(--primary);
@@ -501,4 +491,8 @@ body {
 .bg-surface {
     --tw-bg-opacity: 1;
     background-color: rgb(248 248 248 / var(--tw-bg-opacity));
+}
+
+.icon-facebook {
+    content: "\e90c";
 }
