--- a/app/globals.scss
+++ b/app/globals.scss
@@ -8,6 +8,22 @@
 @import "../styles/custom-datepicker.scss";
 @import "../styles/slider.scss";
 
+/* Main color */
+:root {
+    --primary: #30af5b;
+    --primary-hover: #2a994f;
+    --black: #382c28;
+    --variant1: #776e6b;
+    --variant2: #b4aba8;
+    --white: #ffffff;
+    --outline: #e4e4e4;
+    --surface: #f8f8f8;
+    --red: #c72929;
+    --success: #37b853;
+    --yellow: #f4d118;
+    --line: #e9e9e9;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -164,7 +180,6 @@ body {
     scroll-behavior: smooth;
 }
 
-/* Main class used in Glamphub */
 .container {
     max-width: 1322px !important;
     width: 100%;
