--- a/styles/tent-item.scss
+++ b/styles/tent-item.scss
@@ -83,10 +83,10 @@
     .wishlist-icon {
         background: rgba(56, 44, 40, 0.3);
 
-        &:hover,
-        &.active {
-            background-color: var(--primary);
-        }
+        // &: hover;
+        // &.active {
+        //     background-color: var(--primary);
+        // }
     }
 }
 
